@@ -1376,12 +1376,20 @@ command to generate the output files.
       <match type="string" value="mBIN" offset="102"/>
     </magic>
   </mime-type>
-  <mime-type type="application/x-matroska">
+  <mime-type type="video/x-matroska">
     <_comment>Matroska video</_comment>
     <magic priority="50">
       <match type="string" value="matroska" offset="8"/>
     </magic>
     <glob pattern="*.mkv"/>
+    <alias type="application/x-matroska"/>
+  </mime-type>
+  <mime-type type="audio/x-matroska">
+    <_comment>Matroska audio</_comment>
+    <magic priority="80">
+      <match type="string" value="matroska" offset="8"/>
+    </magic>
+    <glob pattern="*.mka"/>
   </mime-type>
   <mime-type type="application/x-mif">
     <_comment>FrameMaker MIF document</_comment>
